initiall home page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,32 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "jsx": "react-native",
+    "lib": [
+      "esnext"
+    ],
+    "moduleResolution": "bundler",
+    "noEmit": true,
     "strict": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "target": "esnext",
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]
   },
-  "include": ["index.ts", "app.json", "App.tsx", "src/**/*"]
+  "include": [
+    "index.ts",
+    "app.json",
+    "App.tsx",
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "extends": "expo/tsconfig.base"
 }
