--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.12.0",
     "@react-navigation/native": "^7.1.28",
+    "@react-navigation/native-stack": "^7.13.0",
     "@react-navigation/stack": "^7.7.1",
     "@reduxjs/toolkit": "^2.11.2",
     "expo": "~54.0.33",
