--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.12.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.13.0",
     "@react-navigation/stack": "^7.7.1",
     "@reduxjs/toolkit": "^2.11.2",
+    "babel-preset-expo": "^54.0.10",
     "expo": "~54.0.33",
     "expo-blur": "~15.0.8",
+    "expo-crypto": "^15.0.8",
     "expo-font": "~14.0.11",
     "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
